@@ -1108,6 +1108,18 @@ class DefaultUrllib3ManagerTest(TestCase):
         self.assertEqual(manager.proxy.host, 'localhost')
         self.assertEqual(manager.proxy.port, 3128)
 
+    def test_environment_proxy(self):
+        import urllib3
+        config = ConfigDict()
+        os.environ['http_proxy'] = 'http://myproxy:8080'
+        manager = default_urllib3_manager(config=config)
+        self.assertIsInstance(manager, urllib3.ProxyManager)
+        self.assertTrue(hasattr(manager, 'proxy'))
+        self.assertEqual(manager.proxy.scheme, 'http')
+        self.assertEqual(manager.proxy.host, 'myproxy')
+        self.assertEqual(manager.proxy.port, 8080)
+        del os.environ['http_proxy']
+
     def test_config_proxy_custom_cls(self):
         import urllib3
 
